pyramid_layout changelog
========================

0.4 (2012-08-21)
----------------

- Changed name from pyramid_bottlecap to pyramid_layout.

- Completed documentation and unit tests.

0.3 (2012-04-19)
----------------

- Removed Popper layout.  

- Various minor improvements.


0.2 (2012-01-04)
----------------

- initial release